storage/innobase/handler/ha_innodb.cc
@@ -16019,9 +16019,8 @@ innodb_status_output_update(
 	const void*			save __attribute__((unused)))
 {
 	*static_cast<my_bool*>(var_ptr) = *static_cast<const my_bool*>(save);
-	/* The lock timeout monitor thread also takes care of this
-	output. */
-	os_event_set(lock_sys->timeout_event);
+	/* Wakeup server monitor thread. */
+	os_event_set(srv_monitor_event);
 }
 
 static SHOW_VAR innodb_status_variables_export[]= {
